# OOP_hw2

./: CMakeLists.txt  execution-result.txt
include/: card.h  dealer.h  deckofcards.h  enum.h  game.h  player.h
src/: blackjack.cpp  hw2_task1.cpp  hw2_task2.cpp
